tests/NormalTests/paczka1/fuzzy1/78023457.err
Error in line 7: S973 A91 90,6
Error in line 14: QngWuv A266 28,9
Error in line 22: S973 A266 46,3
